<resources>
    <string name="app_name">Laboratorio 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inicio">Ubicación</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_slideshow">Inmuebles</string>
    <string name="CambiarClave">Cambiar Clave</string>
    <string name="Logout">Cerrar sesión</string>

</resources>