<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.lab3_moviles.ui.home.HomeFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.lab3_moviles.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_nav_perfil_to_nav_cambiarClave2"
            app:destination="@id/nav_cambiarClave" />
    </fragment>

    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.example.lab3_moviles.ui.inmuebles.InmueblesFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_inmuebles" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.lab3_moviles.ui.logout.LogoutFragment"
        android:label="@string/Logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_cambiarClave"
        android:name="com.example.lab3_moviles.ui.perfil.CambiarClaveFragment"
        android:label="@string/CambiarClave"
        tools:layout="@layout/fragment_cambiar_clave" >
        <action
            android:id="@+id/action_nav_cambiarClave_to_nav_perfil"
            app:destination="@id/nav_perfil" />
    </fragment>
</navigation>